--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zcf-cli",
-  "version": "1.0.4",
-  "description": "使用泽元开发框架脚手架创建项目的命令行工具",
+  "version": "1.0.6",
+  "description": "泽元开发框架脚手架工程的命令行工具",
   "preferGlobal": true,
   "bin": {
     "zcf": "bin/zcf",
