--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "zcf-cli",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "泽元开发框架脚手架工程的命令行工具",
   "preferGlobal": true,
   "bin": {
     "zcf": "bin/zcf",
     "zcf-init": "bin/zcf-init",
-    "zcf-list": "bin/zcf-list"
+    "zcf-list": "bin/zcf-list",
+    "zcf-set": "bin/zcf-set"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "consolidate": "^0.14.5",
-    "download-git-repo": "^0.2.1",
+    "git-clone": "^0.1.0",
     "handlebars": "^4.0.6",
     "inquirer": "^2.0.0",
     "metalsmith": "^2.3.0",
