--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zcf-cli",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "泽元开发框架脚手架工程的命令行工具",
   "preferGlobal": true,
   "bin": {
@@ -31,6 +31,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "consolidate": "^0.14.5",
+    "download": "^5.0.3",
     "git-clone": "^0.1.0",
     "handlebars": "^4.0.6",
     "inquirer": "^2.0.0",
